# otomai

./: .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_database.ipynb
.github/workflows/: publication-dev.yml  publication-preprod.yml  publication-prod.yml  run-unit-test.yml
backtest/: data_engine.ipynb
backtest/strategies/: big_drop.ipynb
backtest/utilities/: data_manager.py
conf/dev/: listing_backrun.yml  mrat_zscore.yml  rsi_daily.yml
conf/preprod/: listing_backrun.yml  mrat_zscore.yml
conf/prod/: listing_backrun.yml  mrat_zscore.yml
src/otomai/: __main__.py  configs.py  logger.py  scripts.py  settings.py
src/otomai/core/: enums.py  indicators.py  models.py  parameters.py  schemas.py  utils.py
src/otomai/interfaces/scraper/bitget/: client.py  models.py
src/otomai/interfaces/scraper/dextools/models/: __init__.py  request.py  response.py
src/otomai/services/: __init__.py  database.py  exchange.py  messaging.py  notifier.py
src/otomai/services/dextools/: __init__.py  client.py
src/otomai/services/dextools/models/: response.py
src/otomai/strategies/: __init__.py  base.py  listing_backrun.py  mrat_zscore.py  rsi_daily.py  trending_news.py
tests/: .env  conftest.py  mocks.py  test_configs.py
tests/conf/: mrat_zcore_invalid.yml  mrat_zcore_valid.yml
tests/core/: test_indicators.py  test_utils.py
tests/services/: test_notifier.py
